# 10.1063-5.0297017

co_ae/1_ae/: FCIDUMP  dmrg.out  dmrgscf.out  dmrgscf.py  ene_1.txt  ene_3.txt  run.slurm  sodm1.npy
co_ae/33_ae/: FCIDUMP  dmrg.out  dmrgscf.out  dmrgscf.py  ene_1.txt  ene_3.txt  run.slurm
co_ae/44_ae/: FCIDUMP  dmrg.out  dmrgscf.out  dmrgscf.py  ene_1.txt  ene_3.txt  run.slurm  sodm1.npy
co_ae/4_ae/: FCIDUMP  dmrg.out  dmrgscf.out  dmrgscf.py  ene_1.txt  ene_3.txt  run.slurm
co_ae/77_ae/: FCIDUMP  dmrg.out  dmrgscf.out  dmrgscf.py  ene_1.txt  ene_3.txt  run.slurm  sodm1.npy
co_dmet_10o/large_1/: CoSPh4_cas_info  CoSPh4_imp_rohf_orbs.molden  CoSPh4_rohf.chk  FCIDUMP  dmet_siso.out  dmet_siso.py  ene_1.txt  ene_3.txt  kylin.slurm  run.slurm
co_dmet_10o/large_33/: Co_bpp_COOMe_2_cas_info  Co_bpp_COOMe_2_imp_rohf_orbs.molden  FCIDUMP  dmet_siso.out  dmet_siso.py  ene_1.txt  ene_3.txt  kylin.slurm  run.slurm
co_dmet_10o/large_4/: CoSMM10_cas_info  CoSMM10_imp_rohf_orbs.molden  FCIDUMP  dmet_siso.out  dmet_siso.py  ene_1.txt  ene_3.txt  run.slurm
co_dmet_10o/large_44/: CoN6BO3_cas_info  CoN6BO3_imp_rohf_orbs.molden  FCIDUMP  dmet_siso.out  dmet_siso.py  dmrg.inp  ene_1.txt  ene_3.txt  kylin.slurm
co_dmet_10o/large_77/: CoNSPh2.err  CoNSPh2_cas_info  CoNSPh2_imp_rohf_orbs.molden  CoNSPh2_rohf.chk  FCIDUMP  dmet_siso.out  dmet_siso.py  ene_1.txt  ene_3.txt
co_dmet_5o/1/: CoSPh4_cas_info  CoSPh4_imp_rohf_orbs.molden  CoSPh4_rohf.chk  FCIDUMP  dmet_siso.out  dmet_siso.py  dmrg.out  ene_1.txt  ene_3.txt  run.slurm
wigner_nj/: CMakeLists.txt  main.cpp
(+192 files in other folders)
